refactor: remove api stub page + update api model

--- a/src/app/api/api.dialog.html
+++ b/src/app/api/api.dialog.html
@@ -58,7 +58,7 @@
           <md-icon md-svg-src="assets/images/icons/rocket.svg"></md-icon>
           <md-input-container>
             <label>Target URI *</label>
-            <input ng-model="api.proxy.target" required>
+            <input ng-model="api.proxy.endpoint" required>
           </md-input-container>
         </div>
         <div layout="">
