--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -65,7 +65,7 @@
 				</div>
 				<div layout="row" layout-wrap class="inset" ng-controller="ApiController as apiCtrl">
 					<div class="apis-box" flex="33" ng-repeat="api in apiCtrl.apis">
-						<a href="#/apis/sub">
+						<a href="#/apis/{{api.name}}">
 							<md-card class="api-box">
 								<div class="api-box-header" ng-style="{'background-color': apiCtrl.bgColorByIndex($index)}">
 									<h3>{{api.name}}</h3>
