refactor: hide menu while loading

--- a/src/app/main/main.scss
+++ b/src/app/main/main.scss
@@ -94,3 +94,7 @@
 	border-radius: 100px;
 	position: relative;
 }
+
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+	display: none !important;
+}
