--- a/src/app/main/main.scss
+++ b/src/app/main/main.scss
@@ -98,3 +98,14 @@
 [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
 	display: none !important;
 }
+
+md-content {
+	background: #fafafa;
+	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+	color: #333;
+	font-size: 12px;
+}
+
+table[md-data-table]>thead:not([md-table-progress])>tr>th>div {
+	height: 30px;
+}
