--- a/src/app/api/apisThumbMode.html
+++ b/src/app/api/apisThumbMode.html
@@ -21,6 +21,7 @@
 			<md-card class="api-box">
 				<div class="api-box-header" ng-style="{'background-color': apiCtrl.bgColorByIndex($index)}">
 					<h3>{{api.name}}</h3>
+					<h4>{{api.description}}</h4>
 					<h5>{{api.version}}</h5>
 				</div>
 				<div class="widget-user-image">
